# bbl_search

./: .env.example  README.md  init.sh  init_app.sh  init_mysql.sh  mysql.yaml  requirements.txt  setup.cfg
data/: districts.json
src/: bbl_search.py  db.py  load_data.py  utilities.py
