[metadata]
name = bbl_search
version = 0.0.1

[options]
packages = src
install_requires =
    attrs==21.4.0
    certifi==2021.10.8
    cffi==1.15.0
    click==8.1.2
    click-plugins==1.1.1
    cligj==0.7.2
    cryptography==36.0.2
    Fiona==1.8.21
    geopandas==0.10.2
    greenlet==1.1.2
    munch==2.5.0
    numpy==1.22.3
    pandas==1.4.2
    pycparser==2.21
    PyMySQL==1.0.2
    pyproj==3.3.1
    python-dateutil==2.8.2
    pytz==2022.1
    Rtree==1.0.0
    Shapely==1.8.1.post1
    six==1.16.0
    SQLAlchemy==1.4.35

[options.entry_points]
console_scripts =
    bbl_search = src.bbl_search:cli